--- a/templates/index.html
+++ b/templates/index.html
@@ -17,29 +17,7 @@
     <main class="m-8">
       {{ template "task-list" . }}
 
-      {{ if not .Data.TaskLog.TaskHistory }}
-        <form
-          class="w-1/3 flex flex-col"
-          hx-post="/post-key/"
-          hx-target="#task-list"
-          hx-swap="outerHTML"
-        >
-          <label for="user-key">Your `user_key`</label>
-          <input
-            class="p-2 border border-gray-400 rounded-lg"
-            type="text"
-            name="user-key"
-            id="user-key"
-            placeholder="0000"
-          />
-
-          <div class="mb-3"></div>
-
-          <button class="p-4 border border-gray-700 rounded-lg" type="submit">
-            Submit
-          </button>
-        </form>
-      {{ end }}
+      {{ template "user-key-form" . }}
     </main>
   </body>
 </html>
