feat: make form retriable

--- a/templates/user_key.html
+++ b/templates/user_key.html
@@ -23,5 +23,7 @@
 {{ end }}
 
 {{ define "invalid-user-key"}}
-  <h3>Invalid key!</h3>
+  <section id="task-list">
+    <h3 class="mb-4 font-bold text-3xl">Invalid key!</h3>
+  </section>
 {{ end }}
