feat(ui): better error message for invalid key

--- a/templates/user_key.html
+++ b/templates/user_key.html
@@ -24,6 +24,6 @@
 
 {{ define "invalid-user-key"}}
   <section id="task-list">
-    <h3 class="mb-4 font-bold text-3xl">Invalid key!</h3>
+    <h3 class="mb-4 font-bold text-3xl">{{ . }}</h3>
   </section>
 {{ end }}
