--- a/templates/task-list.html
+++ b/templates/task-list.html
@@ -1,11 +1,18 @@
 {{ define "task-list" }}
   <section id="task-list">
+    {{ if .Data.TaskLog.CurrentTask }}
+      <h2 class="mb-4 font-bold text-3xl">Current task</h2>
+      {{template "task" .Data.TaskLog.CurrentTask}}
+    {{ end }}
+
     {{ if .Data.TaskLog.TaskHistory }}
-      <h2 class="mb-4 font-bold text-3xl">Tasks</h2>
+      <h2 class="mb-4 font-bold text-3xl">Task log</h2>
 
       <ul>
         {{ range .Data.TaskLog.TaskHistory }}
+        <li>
           {{ template "task" . }}
+        </li>
         {{ end }}
       </ul>
 
@@ -16,9 +23,8 @@
 {{ end }}
 
 {{ block "task" . }}
-  <li>
-    <div class="w-1/3 p-4 mb-2 border border-gray-400 rounded-lg">
-      <h2>{{ .Name }}</h2>
-    </div>
-  </li>
+  <div class="w-1/3 p-4 mb-2 border border-gray-400 rounded-lg">
+    <h2>{{ .Name }}</h2>
+    <h4>{{ .State }}</h4>
+  </div>
 {{ end }}
