--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -1,5 +1,7 @@
 package pages
 
+import "the-gorgeouses.com/imon-client/internal/views/partials"
+
 templ Index() {
 	<!DOCTYPE html>
 	<html lang="en">
@@ -11,7 +13,9 @@ templ Index() {
 			<script src="https://cdn.tailwindcss.com"></script>
 		</head>
 		<body>
-			<main class="m-8"></main>
+			<main class="m-8">
+				@partials.UserKeyForm()
+			</main>
 		</body>
 	</html>
 }
