feat: add `UpstreamError`

--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -14,6 +14,7 @@ templ Index() {
 		</head>
 		<body>
 			<main class="m-8">
+				@partials.CurrentTaskAndExecutionLog()
 				@partials.UserKeyForm()
 			</main>
 		</body>
