--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -15,7 +15,7 @@ templ Index() {
 		<body>
 			<main class="m-8">
 				<section id="task-list">
-					<h2 class="mb-4 font-bold text-3xl">No tasks</h2>
+					<h2 class="mb-4 font-bold text-3xl">Your task log</h2>
 				</section>
 				@partials.UserKeyForm()
 			</main>
