--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -5,7 +5,7 @@ templ UserKeyForm() {
  		class="w-1/3 flex flex-col"
  		hx-post="/post-key/"
  		hx-target="#task-list"
- 		hx-swap="outerHTML"
+ 		hx-swap="innerHTML"
 	>
 		<label for="user-key">Your `user_key`</label>
 		<input
