feat: init sub-route handler

--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -3,7 +3,7 @@ package partials
 templ UserKeyForm() {
 	<form
  		class="w-1/3 flex flex-col"
- 		hx-post="/post-key/"
+ 		hx-post="/api/task/post-key/"
  		hx-target="#task-list"
  		hx-swap="innerHTML"
 	>
