--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -17,6 +17,7 @@ templ Index() {
 				<section id="task-list">
 					<h2 class="mb-4 font-bold text-3xl">Your task log</h2>
 				</section>
+				<section id="user-list"></section>
 				@partials.UserKeyForm()
 			</main>
 		</body>
