--- a/internal/modules/task/task_list.templ
+++ b/internal/modules/task/task_list.templ
@@ -1,7 +1,7 @@
 package task
 
 templ TaskItem(task Task) {
-	<div class="w-1/3 p-4 mb-2 border border-gray-400 rounded-lg">
+	<div class="p-4 mb-2 border border-gray-400 rounded-lg">
 		<h2>{ task.Name }</h2>
 		<div class="flex">
 			{ string(task.State) }
