--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -2,7 +2,7 @@ package partials
 
 templ UserKeyForm() {
 	<form
- 		class="w-1/3 flex flex-col"
+ 		class="flex flex-col"
  		hx-post="/api/task/post-key/"
  		hx-target="#task-list"
  		hx-swap="innerHTML"
