--- a/internal/modules/task/task_list.templ
+++ b/internal/modules/task/task_list.templ
@@ -1,10 +1,18 @@
 package task
 
+import "strconv"
+
 templ TaskItem(task Task) {
 	<div class="p-4 mb-2 border border-gray-400 rounded-lg">
-		<h2>{ task.Name }</h2>
+		<h3>[{ string(task.State) }] { task.Name }</h3>
 		<div class="flex">
-			{ string(task.State) }
+			<span>
+				if (task.State == End) {
+					Finished in { strconv.Itoa(task.Duration) }
+				} else if (task.State == Break|| task.State == Back) {
+					Running for { strconv.Itoa(task.Duration) }
+				}
+			</span>
 		</div>
 	</div>
 }
