--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -14,7 +14,11 @@ templ Index() {
 		</head>
 		<body>
 			<main class="m-8 flex gap-6">
-				<section id="task-list"></section>
+				<section
+ 					id="task-list"
+ 					hx-get="/api/task/refresh/"
+ 					hx-trigger="task_updated from:body"
+				></section>
 				<div>
 					<section id="user-list"></section>
 					<div class="mb-4"></div>
