fix(ui): re-position err comp

--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -1,6 +1,7 @@
 package partials
 
 templ UserKeyForm() {
+	<div class="mb-4" id="key-form-error"></div>
 	<form
  		class="flex flex-col"
  		hx-post="/api/task/post-key/"
