--- a/internal/views/components/main.templ
+++ b/internal/views/components/main.templ
@@ -1,7 +1,7 @@
 package components
 
 templ ErrorWidget(displayText string) {
-	<div class="w-1/3 p-4 mb-2 border border-red-400 rounded-lg">
+	<div class="p-4 mb-2 border border-red-400 rounded-lg" id="key-form-error" hx-swap-oob="true">
 		<h2>{ displayText }</h2>
 	</div>
 }
