hs: remove trailing slash on hx-* + old html

--- a/internal/modules/task/task_list.templ
+++ b/internal/modules/task/task_list.templ
@@ -27,7 +27,7 @@ templ TaskItem(task Task, isLogTask bool) {
 		if (task.State != End && !isLogTask) {
 			<div
  				class="cursor-pointer"
- 				hx-post="/api/task/update/"
+ 				hx-post="/api/task/update"
  				hx-swap="outerHTML"
  				hx-trigger="click"
  				hx-vals={ formatUpdateTaskPayload(End.String()) }
