--- a/internal/views/pages/index.templ
+++ b/internal/views/pages/index.templ
@@ -16,7 +16,7 @@ templ Index() {
 			<main class="m-8 flex gap-6">
 				<section
  					id="task-list"
- 					hx-get="/api/task/refresh/"
+ 					hx-get="/api/task/refresh"
  					hx-trigger="task_updated from:body"
 				></section>
 				<div>
