--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -4,7 +4,7 @@ templ UserKeyForm() {
 	<div class="mb-4" id="key-form-error"></div>
 	<form
  		class="flex flex-col"
- 		hx-post="/api/task/post-key/"
+ 		hx-post="/api/task/post-key"
  		hx-target="#task-list"
  		hx-swap="innerHTML"
 	>
