--- a/internal/views/partials/user_key.templ
+++ b/internal/views/partials/user_key.templ
@@ -2,25 +2,31 @@ package partials
 
 templ UserKeyForm() {
 	<form
- 		class="flex flex-col"
- 		hx-post="/api/task/post-key"
- 		hx-target="#task-list"
- 		hx-swap="innerHTML"
+		class="flex flex-col"
+		hx-post="/api/task/post-key"
+		hx-target="#task-list"
+		hx-swap="innerHTML"
 	>
 		<div class="" id="key-form-error"></div>
 		<label for="user-key">Your `user_key`</label>
 		<input
- 			class="p-2 border border-gray-400 rounded-lg"
- 			type="text"
- 			name="user-key"
- 			id="user-key"
- 			placeholder="0000"
+			class="p-2 border border-gray-400 rounded-lg"
+			type="text"
+			name="user-key"
+			id="user-key"
+			placeholder="0000"
 		/>
 		<div class="mb-3"></div>
 		<button
- 			class="p-4 border border-gray-700 rounded-lg"
- 			type="submit"
- 			_="on click set #key-form-error.innerHTML to ''"
+			class="p-4 border border-gray-700 rounded-lg disabled:cursor-not-allowed"
+			type="submit"
+			disabled
+			_="on click set #key-form-error.innerHTML to ''
+				on keyup from <input/> if its value is empty
+					add @disabled
+				else
+					remove @disabled
+			"
 		>
 			Submit
 		</button>
